# config-gen-example-py

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes_auth.py  user_login_dto.py  user_registration_dto.py
app/core/: security.py  security_config.py
app/core/security/: secret_client.py  security.py
app/db/: database.py
app/models/: role.py  user.py
config/: BaseConfigModel.py  _DOC.md  base_config_model.py  config_container.py  config_generation.py  environment_keys.py  run_generate_configs.py
config/generators/: _DOC.md  app_config_gen.py  auth_routes_config_gen.py
config/models/: AppConfig.py  AuthRoutesConfig.py  _DOC.md  app_config.py  auth_routes_config.py
